force-app/main/default/objects/Studentmarks__c/Studentmarks__c.object-meta.xml
<CustomObject>
    <label>Studentmarks</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Serialnumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>studentmarkss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>