force-app/main/default/objects/Studentmarks__c/fields/marks__c.field-meta.xml
<CustomField>
    <fullName>marks__c</fullName>
    <label>marks</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>