force-app/main/default/objects/Studentmarks__c/fields/Univnameq__c.field-meta.xml
<CustomField>
    <fullName>Univnameq__c</fullName>
    <formula>Studentmaster__r.University__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Univnameq</label>
    <type>Text</type>
</CustomField>